get from localStorage

--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
 <body>
 
   <header>
-    <h1>Check List</h1>
+    <h1>My Check List</h1>
   </header>
   <form>
     <input type="text" class="todo-input" />
